Fixed segment image being stretched when it's smaller than segment container.
- added min-width for segments
- added display block for image
- added width auto
- added margin-left, margin-right auto

Fixed search bugs 'Video Length Does Not Show Hours In Search' (5610) and 'Search- Videos Showing NaN' (5582)

- added checking for SegmentLengthInSeconds field
- added checking for User Uploaded Videos
- correctly set title for segments and User uploaded videos
- set default image for segments / uuvs when there is no default image
- used common convertSecsToMins for setting hour, minute and sec
- added correctly play link for user uploaded videos

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -56,20 +56,26 @@
 			}
 
 			li {
-				list-style: none;
+				list-style    : none;
 				margin-bottom : 30px;
+				min-width     : 287px;
+
 				.sc-segment-content-container {
 
-					height : auto;
+					height    : auto;
 
 					.sc-segment-image-container {
-						height : 148px;
+						height     : 148px;
 
 						img {
-							height : auto;
+							height  : auto;
+							width   : auto;
+							display : block;
+    						margin-left  : auto;
+    						margin-right : auto;
 						}
 
-						.sc-play-container {
+						.sc-play-cdontainer {
 							top        : 50%;
 							margin-top : -25px;
 						}
